<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/rounded_signup_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:fontFamily="@font/paperlogy_5medium"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


    </TextView>

    <RadioGroup
        android:id="@+id/radioGroupUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioGeneralUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:layout_marginEnd="100dp"/>

        <RadioButton
            android:id="@+id/radioAdjuster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/claims_adjuster" />
    </RadioGroup>

    <EditText
        android:id="@+id/etNewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        app:layout_constraintTop_toBottomOf="@id/radioGroupUserType"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etNewId" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_password"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etNewPassword"
        android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>