<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".loginJh.LoginJhActivity">

    <ImageView
        android:id="@+id/ivLogo1"
        android:layout_width="248dp"
        android:layout_height="65dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/img_login_parse1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:src="@drawable/img_login_parse2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="70dp"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo1" />

    <EditText
        android:id="@+id/etId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/user_id"
        android:padding="15dp"
        android:background="@drawable/rounded_login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo2" />

    <EditText
        android:id="@+id/etPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_login_background"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etId" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/button_active"
        android:layout_marginStart="30dp"
        android:padding="15dp"
        android:textSize="16sp"
        android:fontFamily="@font/paperlogy_5medium"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassWord" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/layoutMember"
        android:focusable="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="55.77dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/paperlogy_5medium"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSocial"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_withSNS"
        android:layout_marginTop="60dp"
        android:textColor="#A5A5A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutMember" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/viewLine"
        android:layout_marginTop="10dp"
        android:background="@drawable/gray_line"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSocial" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/viewLine">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_naver"
            android:layout_marginEnd="50dp"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:src="@drawable/img_kakao"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_google"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>