<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 스크롤뷰 -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 1st View -->

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPhoto1"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgBtnPhoto1"
                    android:layout_weight = "1"
                    app:layout_constraintWidth_percent="0.75"
                    android:visibility="visible" />

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgBtnPhoto1"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 2nd View -->

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPhoto2"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgBtnPhoto2"
                    android:layout_weight = "1"
                    app:layout_constraintWidth_percent="0.75"
                    android:visibility="visible" />

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgBtnPhoto2"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 3rd View -->

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title3"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPhoto3"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgBtnPhoto3"
                    android:layout_weight = "1"
                    app:layout_constraintWidth_percent="0.75"
                    android:visibility="visible" />

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgBtnPhoto3"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 4th View -->

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title4"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPhoto4"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgBtnPhoto4"
                    android:layout_weight = "1"
                    app:layout_constraintWidth_percent="0.75"
                    android:visibility="visible" />

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgBtnPhoto4"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 5th View -->

            <TextView
                android:id="@+id/title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title5"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPhoto5"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgBtnPhoto5"
                    android:layout_weight = "1"
                    app:layout_constraintWidth_percent="0.75"
                    android:visibility="visible" />

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgBtnPhoto5"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- 6th View -->

            <TextView
                android:id="@+id/title6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title6"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="16dp"
                android:layout_gravity="start"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPhoto6"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imgBtnPhoto6"
                    android:layout_weight = "1"
                    app:layout_constraintWidth_percent="0.75"
                    android:visibility="visible" />

                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgBtnPhoto6"
                    android:src="@drawable/ic_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>